webkit arrow alignment fix

--- a/src/components/Header/WebKit/Webkit.module.css
+++ b/src/components/Header/WebKit/Webkit.module.css
@@ -14,6 +14,8 @@
     width: 13px;
     overflow: hidden;
     flex-shrink: 0;
+    top: 1px;
+    left: 1px;
   }
   .heroContent {
     display: flex;
